--- a/docs/job_specs/report_coverage/3n-hsw/ip6-00.md
+++ b/docs/job_specs/report_coverage/3n-hsw/ip6-00.md
@@ -1,6 +1,6 @@
 # 3n-hsw
-### tests 90
-### job hrs est. 11.4
+### tests 54
+### job hrs est. 6.8
 ### job hrs real xx.x
 ### test mins est. 7.6
 ### test mins real x.x
@@ -9,114 +9,78 @@
 ## ./ip4
 ## ./ip4_tunnels
 ## ./ip6
-### intel-vic1227
+### cisco-vic1227
 #### dpdk-vfio-pci
 ##### ethip6-ip6base
 1c AND 78b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 78b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 78b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 1518b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 1518b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 1518b AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
 1c AND imix AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
 2c AND imix AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
-4c AND imix AND ndrpdr AND vic1227 AND drv_vfio_pci AND ethip6-ip6base
-### intel-vic1385
+### cisco-vic1385
 #### dpdk-vfio-pci
 ##### ethip6-ip6base
 1c AND 78b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 78b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 78b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 1518b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 1518b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 1518b AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 1c AND imix AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 2c AND imix AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
-4c AND imix AND ndrpdr AND vic1385 AND drv_vfio_pci AND ethip6-ip6base
 ### intel-x520-da2
 #### dpdk-vfio-pci
 ##### ethip6-ip6base
 1c AND 78b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 78b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 78b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 1518b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 1518b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 1518b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 9000b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
-2c AND 9000b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 9000b AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 1c AND imix AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 2c AND imix AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
-4c AND imix AND ndrpdr AND x520-da2 AND drv_vfio_pci AND ethip6-ip6base
 ### intel-x710
 #### dpdk-vfio-pci
 ##### ethip6-ip6base
 1c AND 78b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 78b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 78b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 1518b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 1518b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 1518b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 9000b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
-2c AND 9000b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 9000b AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND imix AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND imix AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND imix AND ndrpdr AND x710 AND drv_vfio_pci AND ethip6-ip6base
 ### intel-xl710
 #### dpdk-vfio-pci
 ##### ethip6-ip6base
 1c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
-2c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 1c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 2c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
-4c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base
 ##### dot1q-ip6base
 1c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 2c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
-4c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 1c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 2c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
-4c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 1c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
-2c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
-4c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 1c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 2c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
-4c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND dot1q-ip6base
 ##### ethip6-ip6base-copwhtlistbase
 1c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 2c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
-4c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 1c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 2c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
-4c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 1c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
-2c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
-4c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 1c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 2c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
-4c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-copwhtlistbase
 ##### ethip6-ip6base-iacldstbase
 1c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 2c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
-4c AND 78b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 1c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 2c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
-4c AND 1518b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 1c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
-2c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
-4c AND 9000b AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 1c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 2c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
-4c AND imix AND ndrpdr AND xl710 AND drv_vfio_pci AND ethip6-ip6base-iacldstbase
 ## ./ip6_tunnels
 ## ./l2
 ## ./lb
